k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-api
  namespace: ecommerce
  labels:
    app: ecommerce-api
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
      protocol: TCP
      name: http
  selector:
    app: ecommerce-api
